Change the display type of the logo and the header link into flexbox

--- a/styles.css
+++ b/styles.css
@@ -26,6 +26,7 @@ header {
 
 ul {
     list-style-type: none;
+    display: flex;
 }
 
 ul  a {
@@ -33,3 +34,8 @@ ul  a {
     font-size: 18px;
     color: #E5E7EB;
 }
+
+.caplink {
+    display: flex;
+}
+
