Justify the content of the caplink and the ul, set the gap between the links

--- a/styles.css
+++ b/styles.css
@@ -27,6 +27,8 @@ header {
 ul {
     list-style-type: none;
     display: flex;
+    justify-content: space-between;
+    gap: 18px;
 }
 
 ul  a {
@@ -37,5 +39,6 @@ ul  a {
 
 .caplink {
     display: flex;
+    justify-content: space-between;
 }
 
