--- a/styles.css
+++ b/styles.css
@@ -47,5 +47,17 @@ ul  a {
     display: flex;
     justify-content: space-between;
     gap: 120px;
+    border: 1px solid white;
 }
 
+.left-hero {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    border: 1px solid white;
+}
+
+.left-hero > h1 {
+    margin-top: 0;
+    padding: 0;
+}
