--- a/styles.css
+++ b/styles.css
@@ -58,5 +58,8 @@ ul  a {
 .left-hero > h1 {
     margin-top: 0;
     padding: 0;
+    font-size: 48px;
+    font-weight: 900;
+    color: #F9FAF8;
 }
 
