--- a/styles.css
+++ b/styles.css
@@ -53,6 +53,7 @@ ul  a {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
+    flex-basis: auto;
 }
 
 .left-hero > h1 {
@@ -71,4 +72,7 @@ ul  a {
     font-size: 18px;
 }
 
+.left-hero {
+    width: 800px;
+}
 
