--- a/styles.css
+++ b/styles.css
@@ -54,6 +54,7 @@ ul  a {
     flex-direction: column;
     justify-content: flex-start;
     flex-basis: auto;
+    flex-shrink: 1;
 }
 
 .left-hero > h1 {
@@ -63,12 +64,12 @@ ul  a {
     font-weight: 900;
     color: #F9FAF8;
     margin-bottom: 5px;
-    width: 400px;
+    max-width: 400px;
 }
 
 .left-hero > p {
     margin-top: 0;
-    width: 400px;
+    max-width: 450px;
     color: #E5E7EB;
     font-size: 18px;
 }
