--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,7 @@ header, footer {
 header {
     flex-direction: column;
     padding: 10px 80px;
+    padding-bottom: 100px;
 }
 .logo {
     font-size: 24px;
