--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,7 @@ header {
     flex-direction: column;
     padding: 10px 80px;
     padding-bottom: 100px;
+    gap: 100px;
 }
 .logo {
     font-size: 24px;
