--- a/styles.css
+++ b/styles.css
@@ -94,3 +94,13 @@ ul  a {
     margin: auto 100px;
 }
 
+button {
+    background-color: #3882F6;
+    padding: 5px;
+    color: white;
+    font-size: 18px;
+    font-weight: 700;
+    max-width: 120px;
+    border-radius: 10px;
+    box-shadow: none;
+}
