--- a/styles.css
+++ b/styles.css
@@ -107,6 +107,9 @@ button {
 .first {
     display: flex;
     flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    padding: 40px 150px;
 }
 
 .buttons {
