Add the font-size, font-weight, color to the h2 in the .first

--- a/styles.css
+++ b/styles.css
@@ -115,3 +115,9 @@ button {
 .buttons {
     display: flex;
 }
+
+.first h2 {
+    font-size: 36px;
+    font-weight: 800px;
+    color: #1F2937;
+}
