--- a/styles.css
+++ b/styles.css
@@ -126,3 +126,12 @@ button {
     padding: 50px;
     border: 3px solid #3882F6;
 }
+
+.buttons > div {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    padding: 5px;
+}
