--- a/styles.css
+++ b/styles.css
@@ -149,3 +149,9 @@ button {
     background-color: #E5E7EB;
     padding: 60px 0;
 }
+
+.second .quote {
+    font-size: 36px;
+    font-style: italic;
+    color: #1F2937;
+}
