--- a/styles.css
+++ b/styles.css
@@ -154,4 +154,6 @@ button {
     font-size: 36px;
     font-style: italic;
     color: #1F2937;
+    font-weight: lighter;
+    max-width: 830px;
 }
