Add color, font-size, font-weight, max-width, text-align, and padding of 500px to push the author to the right

--- a/styles.css
+++ b/styles.css
@@ -157,3 +157,12 @@ button {
     font-weight: lighter;
     max-width: 830px;
 }
+
+.author {
+    color: black;
+    font-size: 30px;
+    font-weight: 900;
+    max-width: 830px;
+    text-align: right;
+    padding-left: 500px;
+}
