Add flex layout to .third and .action. Add background color for .action

--- a/styles.css
+++ b/styles.css
@@ -166,3 +166,12 @@ button {
     text-align: right;
     padding-left: 500px;
 }
+
+.third {
+    display: flex;
+}
+
+.action {
+    display: flex;
+    background-color: #3882F6;
+}
