--- a/styles.css
+++ b/styles.css
@@ -169,6 +169,9 @@ button {
 
 .third {
     display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 40px;
 }
 
 .action {
