--- a/styles.css
+++ b/styles.css
@@ -177,4 +177,7 @@ button {
 .action {
     display: flex;
     background-color: #3882F6;
+    justify-content: center;
+    align-items: center;
+    gap: 100px;
 }
