Add border radius to .action. Add font-size, color, font-weight to .call

--- a/styles.css
+++ b/styles.css
@@ -181,4 +181,11 @@ button {
     align-items: center;
     gap: 100px;
     padding: 30px 100px;
+    border-radius: 10px;
+}
+
+.call {
+    font-size: 24px;
+    color: #F9FAF8;
+    font-weight: bold;
 }
