--- a/styles.css
+++ b/styles.css
@@ -194,3 +194,9 @@ button {
     font-size: 18px;
     color: #E5E7EB
 }
+
+.action button {
+    background-color: #3882F6;
+    padding: 5px 15px;
+    border: 3px solid white;
+}
