--- a/styles.css
+++ b/styles.css
@@ -200,3 +200,12 @@ button {
     padding: 5px 15px;
     border: 3px solid white;
 }
+
+footer {
+    flex-basis: 100px;
+    text-align: center;
+    color: #F9FAF8;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
